<resources>
    <string name="app_name">minesweeper</string>
    <string name="minesweeper">Minesweeper</string>
    <string name="btStart">Start Game</string>
    <string name="btRank">Ranking</string>
    <string name="settings">Settings</string>
    <string name="tvTableSize">Table size:</string>
    <string name="tvBombNumber">Number of bombs:</string>
    <string name="tvPlayer">Player Name:</string>
    <string name="btSave">Save</string>
    <string name="preference_file_key">goma.minesweeper.PREFERENCE_FILE_KEY</string>
    <string name="remaining_boms">Remaining boms:</string>
    <string name="time">Time:</string>

    <string-array name="tableSize_array">
        <item>6x6</item>
        <item>8x8</item>
        <item>10x10</item>
        <item>12x12</item>
        <item>14x14</item>
        <item>16x16</item>
        <item>18x18</item>
        <item>20x20</item>
    </string-array>

    <string-array name="tableSizeValue_array">
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player">Player:</string>
    <string name="remaining_bombs">Remaining bombs:</string>
    <string name="ranking">Ranking</string>
    <string name="number_of_bombs">Number of bombs:</string>
    <string name="default_tablesize">10</string>
    <string name="by_bombs">By bombs</string>
    <string name="bombs">Bombs</string>
    <string name="by_time">By time</string>
    <string name="bomb">Bomb</string>
    <string name="errorText">Number of bombs should not be set higher than number of cells and should be a numeric value!</string>


</resources>